--- a/Libreria/index.html
+++ b/Libreria/index.html
@@ -1,22 +1,51 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Gallery Lighbox JS</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <!-- Styles -->
+    
+    <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+</head>
+<body>
+   
+
+    <div class="gallery-container">
+        <div class="gallery-card">
+            <a href="images/img-1.jpg" data-lightbox="roadtrip"><img src="images/img-1.jpg" alt="Imagen"></a>
+        </div>
+
+        <div class="gallery-card">
+            <a href="images/img-2.jpg" data-lightbox="roadtrip"><img src="images/img-2.jpg" alt="Imagen"></a>
+        </div>
+
+        <div class="gallery-card">
+            <a href="images/img-3.jpg" data-lightbox="roadtrip"><img src="images/img-3.jpg" alt="Imagen"></a>
+        </div>
+
+        <div class="gallery-card">
+            <a href="images/img-4.jpg" data-lightbox="roadtrip"><img src="images/img-4.jpg" alt="Imagen"></a>
+        </div>
+
+        <div class="gallery-card">
+            <a href="images/img-5.jpg" data-lightbox="roadtrip"><img src="images/img-5.jpg" alt="Imagen"></a>
+        </div>
+
+        <div class="gallery-card">
+            <a href="images/img-6.jpg" data-lightbox="roadtrip"><img src="images/img-6.jpg" alt="Imagen"></a>
+        </div>
+    </div>
+
+
+<!-- Scripts -->
+<script src="js/lightbox-plus-jquery.min.js"></script>
+<script src="js/lightbox.min.js"></script>
+<script src="js/app.js"></script>
+
+</body>
 </html>
