--- a/Libreria/index.html
+++ b/Libreria/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gallery Lighbox JS</title>
+    <title>Galeria</title>
 
-    <!-- Styles -->
+   
     
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -42,7 +42,7 @@
     </div>
 
 
-<!-- Scripts -->
+
 <script src="js/lightbox-plus-jquery.min.js"></script>
 <script src="js/lightbox.min.js"></script>
 <script src="js/app.js"></script>
